--- a/chatbot/templates/index.html
+++ b/chatbot/templates/index.html
@@ -3,9 +3,9 @@
 {% load static %}
 
 {% block title %}
-  anandhu vasu
-{% endblock title %}
 
+{% endblock title %}
+hhhhhh
 {% block content %}
     <section class="slider-area "> 
         <div class="slider-active">
