count update... number is not increasing

--- a/chatbot/templates/index.html
+++ b/chatbot/templates/index.html
@@ -301,8 +301,14 @@
     <div style="background-color: #fffcf2;">
          <div class="container"  >
 
-    <br><br><br>
+             <br><br><br>
+             <div class="section-tittle mb-25 text-center">
+                            <h2>IVA: More than just a Chatbot or Voicebot</h2>
+                        </div>
+                        <p class="mb-20 text-center">
+                            kingspinai’s Intelligent Virtual Assistants (IVA) are built to understand industry and domain-specific context, solving specific problems end to end with the objective of improving CSAT & NPS.</p><br><br><br>
         <div class="row">
+
             <div class="col-md-4 text-center">
               <div class="thumbnail ">
                   <img src="{% static 'img/gallery/NLU-1.png' %}" alt="Lights" style="align-content: center">
@@ -373,7 +379,27 @@
                         </div>
                     <p class="mb-20 text-center">
                         With over 7 years of experience in AI, we know what it takes to build impactful conversational experiences. We’ve helped businesses globally drive exciting results and grow exponentially in their digital transformation journey.
-
+            <br><br><br>
+            <div class="row">
+                <div class="col-md-4 ">
+                    <div class="counter-ls blue">
+                        <div class="counter-ls-con">$<span class="counter-ls-value">3</span>M+</div>
+                        <h3 class="text-lowercase">In annual savings, along with reduced wait times of 6.2 seconds for the 3rd largest telecom operator in the world.</h3>
+                    </div>
+                </div>
+                <div class="col-md-4 ">
+                    <div class="counter-ls magenta">
+                        <div class="counter-ls-con"><span class="counter-ls-value">5</span></div>
+                        <h3 class="text-lowercase">Days is all it took to build the world's largest WhatsApp Chatbot!</h3>
+                    </div>
+                </div>
+                <div class="col-md-4 ">
+                    <div class="counter-ls green">
+                        <div class="counter-ls-con"><span class="counter-ls-value">80</span>%</div>
+                        <h3 class="text-lowercase">Accuracy rate for Singapore’s largest telco provider with additional cost savings with IVR deflection.</h3>
+                    </div>
+                </div>
+            </div>
     </div>
 
 
