count update... number is not increasing

--- a/chatbot/templates/index.html
+++ b/chatbot/templates/index.html
@@ -380,7 +380,7 @@
                     <p class="mb-20 text-center">
                         With over 7 years of experience in AI, we know what it takes to build impactful conversational experiences. We’ve helped businesses globally drive exciting results and grow exponentially in their digital transformation journey.
             <br><br><br>
-            <div class="row">
+            <div class="row" id="count">
                 <div class="col-md-4 ">
                     <div class="counter-ls blue">
                         <div class="counter-ls-con">$<span class="counter-ls-value">3</span>M+</div>
@@ -401,7 +401,6 @@
                 </div>
             </div>
     </div>
-
 
 
 
