--- a/chatbot/templates/index.html
+++ b/chatbot/templates/index.html
@@ -3,11 +3,41 @@
 {% load static %}
 
 {% block title %}
-  Index
+  Kingspin AI
 {% endblock title %}
 
 {% block content %}
     <section class="slider-area "> 
+        <div class="sbg-wrapper">
+            <svg  xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 288 288">
+            <linearGradient id="PSgrad_0" x1="70.711%" x2="0%" y1="70.711%" y2="0%">
+              <stop offset="0%" stop-color="#8E2DE2" stop-opacity="1" />
+              <stop offset="100%" stop-color="#4A00E0" stop-opacity="1" />
+            </linearGradient>
+            <path fill="url(#PSgrad_0)">
+            
+                <animate repeatCount="indefinite" attributeName="d" dur="10s"
+                
+                values="M37.5,186c-12.1-10.5-11.8-32.3-7.2-46.7c4.8-15,13.1-17.8,30.1-36.7C91,68.8,83.5,56.7,103.4,45
+                c22.2-13.1,51.1-9.5,69.6-1.6c18.1,7.8,15.7,15.3,43.3,33.2c28.8,18.8,37.2,14.3,46.7,27.9c15.6,22.3,6.4,53.3,4.4,60.2
+                c-3.3,11.2-7.1,23.9-18.5,32c-16.3,11.5-29.5,0.7-48.6,11c-16.2,8.7-12.6,19.7-28.2,33.2c-22.7,19.7-63.8,25.7-79.9,9.7
+                c-15.2-15.1,0.3-41.7-16.6-54.9C63,186,49.7,196.7,37.5,186z;
+                
+                
+                M51,171.3c-6.1-17.7-15.3-17.2-20.7-32c-8-21.9,0.7-54.6,20.7-67.1c19.5-12.3,32.8,5.5,67.7-3.4C145.2,62,145,49.9,173,43.4
+                c12-2.8,41.4-9.6,60.2,6.6c19,16.4,16.7,47.5,16,57.7c-1.7,22.8-10.3,25.5-9.4,46.4c1,22.5,11.2,25.8,9.1,42.6
+                c-2.2,17.6-16.3,37.5-33.5,40.8c-22,4.1-29.4-22.4-54.9-22.6c-31-0.2-40.8,39-68.3,35.7c-17.3-2-32.2-19.8-37.3-34.8
+                C48.9,198.6,57.8,191,51,171.3z;
+                
+                M37.5,186c-12.1-10.5-11.8-32.3-7.2-46.7c4.8-15,13.1-17.8,30.1-36.7C91,68.8,83.5,56.7,103.4,45
+                c22.2-13.1,51.1-9.5,69.6-1.6c18.1,7.8,15.7,15.3,43.3,33.2c28.8,18.8,37.2,14.3,46.7,27.9c15.6,22.3,6.4,53.3,4.4,60.2
+                c-3.3,11.2-7.1,23.9-18.5,32c-16.3,11.5-29.5,0.7-48.6,11c-16.2,8.7-12.6,19.7-28.2,33.2c-22.7,19.7-63.8,25.7-79.9,9.7
+                c-15.2-15.1,0.3-41.7-16.6-54.9C63,186,49.7,196.7,37.5,186z	"/>
+            
+                </path>
+            
+            </svg>
+            </div>
         <div class="slider-active">
             <!-- Single Slider -->
             <div class="single-slider slider-height">
@@ -15,10 +45,9 @@
                     <div class="row justify-content-center">
                         <div class="col-xl-8 col-lg-11 col-md-12">
                             <div class="hero__caption text-center">
-                                <h1 data-animation="bounceIn" data-delay="0.2s">Stay connected together in your own business network</h1>
-                                <p data-animation="fadeInUp" data-delay="0.4s">Personalized experiences are proven to increase conversions. Appli makes 
-                                it easy. Let's make the internet delightfully human.</p>
-                                <a href="#" class="btn hero-btn" data-animation="fadeInUp" data-delay="0.7s">Get Started Now</a>
+                                <h1 data-animation="bounceIn" data-delay="0.2s">AI That Puts Your Customers First</h1>
+                                <p data-animation="fadeInUp" data-delay="0.4s">Upgrade your customer experience with Kingspin’s Intelligent Virtual Assistants, driving ROI at every stage of the lifecycle</p>
+                                <a href="#" class="btn hero-btn" data-animation="fadeInUp" data-delay="0.7s">Get a Demo</a>
                             </div>
                         </div>
                     </div>
@@ -30,10 +59,13 @@
                     <div class="row justify-content-center">
                         <div class="col-xl-8 col-lg-11 col-md-12">
                             <div class="hero__caption text-center">
-                                <h1 data-animation="bounceIn" data-delay="0.2s">Stay connected together in your own business network</h1>
-                                <p data-animation="fadeInUp" data-delay="0.4s">Personalized experiences are proven to increase conversions. Appli makes 
-                                it easy. Let's make the internet delightfully human.</p>
-                                <a href="#" class="btn hero-btn" data-animation="fadeInUp" data-delay="0.7s">Get Started Now</a>
+                                <h1 data-animation="bounceIn" data-delay="0.2s">
+                                    AI That Puts Your Customers First
+                                </h1>
+                                <p data-animation="fadeInUp" data-delay="0.4s">
+                                    Upgrade your customer experience with Kingspin’s Intelligent Virtual Assistants, driving ROI at every stage of the lifecycle
+                                </p>
+                                <a href="#" class="btn hero-btn" data-animation="fadeInUp" data-delay="0.7s">Get a Demo</a>
                             </div>
                         </div>
                     </div>
@@ -47,7 +79,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="screen-img">
-                        <img src="{% static 'assets/img/gallery/screen.png' %}" alt="" class=" w-100">
+                        <img src="{% static 'img/gallery/screen.png' %}" alt="" class=" w-100">
                     </div>
                 </div>
             </div>
@@ -55,36 +87,109 @@
     </div>
     <!--? Brand Area Start -->
     <div class="brand-area">
+        <h1 class="text-center font-italic font-weight-bold">Trusted by the World’s Leading Brands</h1>
         <div class="container">
             <div class="brand-active brand-border pt-50">
-                <div class="single-brand">
-                    <img src="{% static 'img/gallery/brand1.png' %}" alt="">
+                <div class="single-brand m-3 brand-sh purple">
+                    <div><img src="{% static 'img/gallery/brand1.png' %}" alt=""></div>
                 </div>
-                <div class="single-brand">
-                    <img src="{% static 'img/gallery/brand2.png' %}" alt="">
+                <div class="single-brand m-3 brand-sh purple">
+                    <div><img src="{% static 'img/gallery/brand2.png' %}" alt=""></div>
                 </div>
-                <div class="single-brand">
-                    <img src="{% static 'img/gallery/brand3.png' %}" alt="">
+                <div class="single-brand m-3 brand-sh purple">
+                    <div><img src="{% static 'img/gallery/brand3.png' %}" alt=""></div>
                 </div>
-                <div class="single-brand">
-                    <img src="{% static 'img/gallery/brand4.png' %}" alt="">
+                <div class="single-brand m-3 brand-sh purple">
+                    <div><img src="{% static 'img/gallery/brand4.png' %}" alt=""></div>
                 </div>
-                <div class="single-brand">
-                    <img src="{% static 'img/gallery/brand2.png' %}" alt="">
+                <div class="single-brand m-3 brand-sh purple">
+                    <div><img src="{% static 'img/gallery/brand2.png' %}" alt=""></div>
                 </div>
-                <div class="single-brand">
-                    <img src="{% static 'img/gallery/brand5.png' %}" alt="">
+                <div class="single-brand m-3 brand-sh purple">
+                    <div><img src="{% static 'img/gallery/brand5.png' %}" alt=""></div>
                 </div>
-                <div class="single-brand">
-                    <img src="{% static 'img/gallery/brand4.png' %}" alt="">
+                <div class="single-brand m-3 brand-sh purple">
+                    <div><img src="{% static 'img/gallery/brand4.png' %}" alt=""></div>
                 </div>
-                <div class="single-brand">
-                    <img src="{% static 'img/gallery/brand4.png' %}" alt="">
+                <div class="single-brand m-3 brand-sh purple">
+                    <div><img src="{% static 'img/gallery/brand4.png' %}" alt=""></div>
                 </div>
             </div>
         </div>
     </div>
     <!-- Brand Area End -->
+    <section class="" style="margin-top: 70px;">
+        <div class="container-fluid">
+            <div class="row text-center bg-light py-1">
+                <div class="col-md-4 col-sm-12 shadow-sm pt-4">
+                    <div class="single-services d-flex flex-column align-items-center mb-30 text-center">
+                        <div class="services-ion text-center">
+                            <img style="object-fit: fit;width:100%;height:100px;" src="{% static 'img/icon/services2.svg' %}" alt="">
+                        </div>
+                        <div class="services-cap" style="max-width:400px !important;">
+                            <p>Featured as a recommended vendor in Emerging Technologies and Trends Impact Radar: AI in Insurance</p>
+                            <h5><a href="#">Read More</a></h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-12 shadow-sm pt-4">
+                    <div class="single-services d-flex flex-column align-items-center mb-30 text-center">
+                        <div class="services-ion text-center">
+                            <img style="object-fit: fit;width:100%;height:100px;" src="{% static 'img/icon/services2.svg' %}" alt="">
+                        </div>
+                        <div class="services-cap" style="max-width:400px !important;">
+                            <p>Part of Jio Platforms Limited, the $65 billion Internet conglomerate backed by Google, Facebook, and others</p>
+                            <h5><a href="#">Read More</a></h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-12 shadow-sm pt-4">
+                    <div class="single-services d-flex flex-column align-items-center mb-30 text-center">
+                        <div class="services-ion text-center">
+                            <img style="object-fit: fit;width:100%;height:100px;" src="{% static 'img/icon/services2.svg' %}" alt="">
+                        </div>
+                        <div class="services-cap" style="max-width:400px !important;">
+                            <p>Featured as one of the Top 16 Solution Providers in Decision Maker’s Guide to Enterprise Intelligent Assistants</p>
+                            <h5><a href="#">Read More</a></h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="ach-counter" style="margin-top:70px;">
+        <div class="container">
+            <div class="row justify-content-center mb-3">
+                <h1>Pioneers in Conversational AI since 2013</h1>
+            </div>
+            <div class="row">
+                <div class="col-md-3 col-sm-6">
+                    <div class="counter-ls">
+                        <div class="counter-ls-con"><span class="counter-ls-value">3</span>B+</div>
+                        <h3>Chat & Voice Interactions</h3>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="counter-ls blue">
+                        <div class="counter-ls-con"><span class="counter-ls-value">145</span></div>
+                        <h3>Live Implementations</h3>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="counter-ls magenta">
+                        <div class="counter-ls-con"><span class="counter-ls-value">6</span></div>
+                        <h3>Fortune 500 Customers</h3>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="counter-ls green">
+                        <div class="counter-ls-con"><span class="counter-ls-value">100</span>M+</div>
+                        <h3>Consumers Reached Globally</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!--? Our Services Start -->
     <section class="our-services">
         <div class="container">
