--- a/chatbot/templates/base.html
+++ b/chatbot/templates/base.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>
         {% block title %}
-            App landing | Template
+            Kingspin AI
         {% endblock title %}
     </title>
     <meta name="description" content="">
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="{% static 'css/slick.css' %}">
     <link rel="stylesheet" href="{% static 'css/nice-select.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     
     {% block head %}
       
@@ -57,7 +58,7 @@
                             <!-- Logo -->
                             <div class="col-xl-2 col-lg-2">
                                 <div class="logo">
-                                    <a href="index.html"><img src="{% static 'img/logo/logo.png' %}" alt=""></a>
+                                    <a href="index.html"><h1 class="text-white font-weight-bold">Kingspin AI</h1><!-- <img src="{% static 'img/logo/logo.png' %}" alt=""> --></a>
                                 </div>
                             </div>
                             <div class="col-xl-10 col-lg-10">
@@ -138,6 +139,7 @@
 <!-- Jquery Plugins, main Jquery -->	
 <script src="{% static 'js/plugins.js' %}"></script>
 <script src="{% static 'js/main.js' %}"></script>
+<script src="{% static 'js/custom.js' %}"></script>
 {% block script %}
   
 {% endblock script %}
