why kingspinai created

--- a/chatbot/templates/nav.html
+++ b/chatbot/templates/nav.html
@@ -1,6 +1,6 @@
 <nav>
     <ul id="navigation">                                                                                          
-        <li class="active" ><a href="index.html">Home</a></li>
+        <li class="active" ><a href="{% url 'whykingspinai' %}">Why Kingspinai?</a></li>
         <li><a href="features.html">Features</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="faq.html">FAQ</a></li>
