why kingspinai completed

--- a/chatbot/static/css/custom.css
+++ b/chatbot/static/css/custom.css
@@ -158,3 +158,19 @@
 #top-bar{
   background-color: #cfcdcd77;
 }
+
+
+@media screen and (max-width: 990px) {
+  .whyimage1 {
+    width: 70%;
+  }
+  .whyimage2{
+    width: 6%;
+  }
+  .whyimage3{
+    width: 100%;
+  }
+  .whyimage4{
+    width: 85%;
+  }
+}
