--- a/chatbot/templates/footer.html
+++ b/chatbot/templates/footer.html
@@ -1,5 +1,19 @@
 {% load static %}
 <footer>
+    <section class="wantToWork-area ">
+    <div class="container">
+        <div class="wants-wrapper w-padding2 section-bg2" data-background="{% static 'img/gallery/section_bg02.png' %}">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-xl-7 col-lg-9 col-md-8">
+                    <div class="wantToWork-caption text-center">
+                        <h2>Drive Business Growth using Conversational AI</h2>
+                        <a href="#" class="btn3 wantToWork-btn">Get A Demo</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
     <div class="footer-wrappper section-bg" data-background="{% static 'img/gallery/footer-bg.png' %}">
         <!-- Footer Start-->
         <div class="footer-area footer-padding">
