--- a/chatbot/templates/whykingspinai.html
+++ b/chatbot/templates/whykingspinai.html
@@ -7,33 +7,61 @@ Kingspin AI
 {% endblock title %}
 
 {% block content %}
-
-<section class="slider-area slider-area2">
-    <div class="slider-active slick-initialized slick-slider">
-    
-    
-    <div class="slick-list draggable"><div class="slick-track" style="opacity: 1; width: 752px;"><div class="single-slider slider-height2 slick-slide slick-current slick-active" style="width: 752px; position: relative; left: 0px; top: 0px; z-index: 999; opacity: 1;" data-slick-index="0" aria-hidden="false" tabindex="0">
-    <div class="container">
-    <div class="row justify-content-center">
-    <div class="col-xl-8 col-lg-11 col-md-12">
-    <div class="hero__caption hero__caption2 text-center">
-    <h1 data-animation="bounceIn" data-delay="0.2s" style="animation-delay: 0.2s;" class="">Why Kingspin AI?</h1>
-     </div>
-    </div>
-    </div>
-    </div>
-    </div></div></div></div>
-    </section>
     <br><br><br><br><br>
     <div class="container">
         <div class="section-tittle mb-25 text-center">
-            <h2>IVA: More than just a Chatbot or Voicebot</h2>
+            <h2>Al That Understands Humans</h2>
         </div>
         <p class="mb-20 text-center">
-            kingspinai’s Intelligent Virtual Assistants (IVA) are built to understand industry and domain-specific
-            context, solving specific problems end to end with the objective of improving CSAT & NPS.</p><br><br><br>
+            Industry AI models with domain-specific intelligence to accurately comprehend user intent and deliver contextual responses solving <br> problems end-to-end.
+             <div class="about-img text-center ">
+            <img src="{% static 'img/gallery/why image1.jpg' %}" alt="" width="40%" class=" whyimage1">
+            </div>
 
 
+        <br><br><br><br><br>
+        <div class="section-tittle mb-25 text-center" >
+            <h2>Holistic Conversational AI Solution</h2>
+        </div>
+        <p class="mb-20 text-center">
+            Accelerate your AI journey with an all-inclusive  platform with in-built domain-specific natural language models, ready-to-deploy Smart Skills & Flexible Integrations that scale at a break-neck pace.
+            <div class="about-img text-center ">
+            <img src="{% static 'img/gallery/why image2.png' %}" alt="" width="2.5%" class="whyimage2">
+            </div>
+
+
+        <br><br><br>
+        <div class="section-tittle mb-25 text-center">
+            <h2>Platform</h2>
+        </div>
+        <p class="mb-20 text-center">
+            Build intelligent virtual assistants (IVA) using our drag & drop conversation studio, handoff to smart agent chat for complex queries and analyze in real time how users interact with your IVA.
+        <div class="about-img text-center">
+            <img src="{% static 'img/gallery/why image3.png' %}" alt="" width="70%" class="whyimage3">
+        </div>
+
+        <br><br><br><br><br>
+        <div class="section-tittle mb-25 text-center">
+            <h2>Al That Understands Humans</h2>
+        </div>
+        <p class="mb-20 text-center">
+            Industry AI models with domain-specific intelligence to accurately comprehend user intent and deliver contextual responses solving <br> problems end-to-end.
+         <div class="about-img text-center">
+            <img src="{% static 'img/gallery/why image4.png' %}" alt="" width="70%" class="whyimage4">
+        </div>
+
+        <br><br><br><br><br>
+        <div class="section-tittle mb-25 text-center">
+            <h2>Al That Understands Humans</h2>
+        </div>a
+        <p class="mb-20 text-center">
+            Industry AI models with domain-specific intelligence to accurately comprehend user intent and deliver contextual responses solving <br> problems end-to-end.
+         <div class="about-img text-center ">
+            <img src="{% static 'img/gallery/why image5.png' %}" alt="" width="50%" class="whyimage1" >
+        </div>
+
+
+    <br><br><br><br>
     </div>
 
 {% endblock content %}
