--- a/chatbot/templates/index.html
+++ b/chatbot/templates/index.html
@@ -279,7 +279,7 @@ Kingspin AI
         </div>
     </section> -->
 <!-- Our Services End -->
-<!--? About Area  -->
+<!--? About Area  --><br><br><br>
 <section class="about-area2  section-bg2">
     <div class="container">
         <div class="about-caption mb-50  text-center">
@@ -490,18 +490,5 @@ Kingspin AI
 </section>
 <!--? Testimonial Area End -->
 <!--? Want To work 01-->
-<section class="wantToWork-area ">
-    <div class="container">
-        <div class="wants-wrapper w-padding2 section-bg2" data-background="{% static 'img/gallery/section_bg02.png' %}">
-            <div class="row align-items-center justify-content-center">
-                <div class="col-xl-7 col-lg-9 col-md-8">
-                    <div class="wantToWork-caption text-center">
-                        <h2>Drive Business Growth using Conversational AI</h2>
-                        <a href="#" class="btn3 wantToWork-btn">Get A Demo</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+
 {% endblock content %}
