--- a/chatbot/templates/base.html
+++ b/chatbot/templates/base.html
@@ -51,7 +51,23 @@
     <header>
         <!-- Header Start -->
         <div class="header-area header-transparent">
-            <div class="main-header ">
+            <div id="top-bar" class="carousel slide shadow-sm" data-ride="carousel">
+                <div class="carousel-inner text-white">
+                  <div class="carousel-item active">
+                    <div class="mx-5 my-2 text-center">
+                        Introducing WhatsApp Accelerate Scheme 2021  
+                        <button  class="genric-btn primary circle">Get Started</button>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="mx-5 my-2 text-center">
+                        [New Product] Enhance CX with Conversational IVR 
+                        <button class="genric-btn primary circle">Get Started</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            <div class="main-header">
                 <div class="header-bottom  header-sticky">
                     <div class="container-fluid">
                         <div class="row align-items-center">
