--- a/chatbot/templates/index.html
+++ b/chatbot/templates/index.html
@@ -282,7 +282,7 @@ Kingspin AI
 <!--? About Area  -->
 <section class="about-area2  section-bg2">
     <div class="container">
-        <div class="about-caption mb-50 ">
+        <div class="about-caption mb-50  text-center">
             <div class="about-icon">
                 <img src="{% static 'img/icon/about.svg' %}" alt="">
             </div>
