--- a/chatbot/templates/whykingspinai.html
+++ b/chatbot/templates/whykingspinai.html
@@ -7,6 +7,23 @@ Kingspin AI
 {% endblock title %}
 
 {% block content %}
+
+<section class="slider-area slider-area2">
+    <div class="slider-active slick-initialized slick-slider">
+    
+    
+    <div class="slick-list draggable"><div class="slick-track" style="opacity: 1; width: 752px;"><div class="single-slider slider-height2 slick-slide slick-current slick-active" style="width: 752px; position: relative; left: 0px; top: 0px; z-index: 999; opacity: 1;" data-slick-index="0" aria-hidden="false" tabindex="0">
+    <div class="container">
+    <div class="row justify-content-center">
+    <div class="col-xl-8 col-lg-11 col-md-12">
+    <div class="hero__caption hero__caption2 text-center">
+    <h1 data-animation="bounceIn" data-delay="0.2s" style="animation-delay: 0.2s;" class="">Why Kingspin AI?</h1>
+     </div>
+    </div>
+    </div>
+    </div>
+    </div></div></div></div>
+    </section>
     <br><br><br><br><br>
     <div class="container">
         <div class="section-tittle mb-25 text-center">
