--- a/chatbot/templates/base.html
+++ b/chatbot/templates/base.html
@@ -56,13 +56,13 @@
                   <div class="carousel-item active">
                     <div class="mx-5 my-2 text-center">
                         Introducing WhatsApp Accelerate Scheme 2021  
-                        <button  class="genric-btn primary circle">Get Started</button>
+                        <button  class="genric-btn primary circle small">Get Started</button>
                     </div>
                   </div>
                   <div class="carousel-item">
                     <div class="mx-5 my-2 text-center">
                         [New Product] Enhance CX with Conversational IVR 
-                        <button class="genric-btn primary circle">Get Started</button>
+                        <button class="genric-btn primary circle small">Get Started</button>
                     </div>
                   </div>
                 </div>
