--- a/chatbot/templates/index.html
+++ b/chatbot/templates/index.html
@@ -280,7 +280,7 @@ Kingspin AI
     </section> -->
 <!-- Our Services End -->
 <!--? About Area  -->
-<section class="about-area2  section-bg2">
+<section class="about-area2  section-bg2 ms-t">
     <div class="container">
         <div class="about-caption mb-50  text-center">
             <div class="about-icon">
