--- a/chatbot/templates/whykingspinai.html
+++ b/chatbot/templates/whykingspinai.html
@@ -7,6 +7,22 @@ Kingspin AI
 {% endblock title %}
 
 {% block content %}
+<section class="slider-area slider-area2">
+    <div class="slider-active">
+        <!-- Single Slider -->
+        <div class="single-slider slider-height2">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-xl-8 col-lg-11 col-md-12">
+                        <div class="hero__caption hero__caption2 text-center">
+                            <h1 data-animation="bounceIn" data-delay="0.2s">Why Kingspin AI</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>          
+        </div>
+    </div>
+</section>
     <br><br><br><br><br>
     <div class="container">
         <div class="section-tittle mb-25 text-center">
