--- a/chatbot/templates/index.html
+++ b/chatbot/templates/index.html
@@ -65,7 +65,7 @@ Kingspin - AI
                         <div class="header-hero-content text-center">
                             <h3 class="header-sub-title wow fadeInUp mb-2" style="text-shadow: 0 0 10px white;" data-wow-duration="1.3s" data-wow-delay="0.2s"><big>Kingspin AI</big></h3>
                             <h2 class="header-title wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.5s">Chatbot that Redefines Productivity</h2>
-                            <p class="text wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s"></p>
+                            <p class="text wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.8s">Enhance your customer interaction through our elegant conversational solution</p>
                             <a href="#" class="main-btn wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.1s">Get Started</a>
                         </div> <!-- header hero content -->
                     </div>
@@ -184,15 +184,18 @@ Kingspin - AI
                     <div class="about-content mt-50 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="section-title">
                             <div class="line"></div>
-                            <h3 class="title">Quick & Easy <span>to Use Bootstrap Template</span></h3>
+                            <h3 class="title"><span>Chatbot for </span> Web</h3>
                         </div> <!-- section title -->
-                        <p class="text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, seiam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing.</p>
-                        <a href="#" class="main-btn">Try it Free</a>
+                        <p class="text">
+                            Upgrade your website with intelligent conversational agent to deliver high-performing customer experiences.
+                            Simple and reliable methods for easy integration 
+                        </p>
+                        <!-- <a href="#" class="main-btn">Try it Free</a> -->
                     </div> <!-- about content -->
                 </div>
                 <div class="col-lg-6">
                     <div class="about-image text-center mt-50 wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
-                        <img src="{% static 'images/about1.svg' %}" alt="about">
+                        <img src="{% static 'images/chat_bot.svg' %}" alt="about">
                     </div> <!-- about image -->
                 </div>
             </div> <!-- row -->
@@ -216,15 +219,17 @@ Kingspin - AI
                     <div class="about-content mt-50 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="section-title">
                             <div class="line"></div>
-                            <h3 class="title">Modern design <span> with Essential Features</span></h3>
+                            <h3 class="title">NLP powered <span> with Essential Features</span></h3>
                         </div> <!-- section title -->
-                        <p class="text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, seiam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing.</p>
-                        <a href="#" class="main-btn">Try it Free</a>
+                        <p class="text">
+                            NLP architecture is built on a combination of modules such as Language detection, ASR classification, Context Manager, that work in tandem with deep learning-based encoders to accurately understand natural language and handle user queries with higher precision.
+                        </p>
+                        <!-- <a href="#" class="main-btn">Try it Free</a> -->
                     </div> <!-- about content -->
                 </div>
                 <div class="col-lg-6 order-lg-first">
                     <div class="about-image text-center mt-50 wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
-                        <img src="{% static 'images/about2.svg' %}" alt="about">
+                        <img src="{% static 'images/nlp.png' %}" alt="about">
                     </div> <!-- about image -->
                 </div>
             </div> <!-- row -->
@@ -234,6 +239,7 @@ Kingspin - AI
 
     <!--====== ABOUT PART START ======-->
     
+
     <section class="about-area pt-70">
         <div class="container">
             <div class="row">
@@ -241,15 +247,17 @@ Kingspin - AI
                     <div class="about-content mt-50 wow fadeInLeftBig" data-wow-duration="1s" data-wow-delay="0.5s">
                         <div class="section-title">
                             <div class="line"></div>
-                            <h3 class="title"><span>Crafted for</span> SaaS, App and Software Landing Page</h3>
+                            <h3 class="title"><span>Simple</span> Conversational Studio</h3>
                         </div> <!-- section title -->
-                        <p class="text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, seiam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing.</p>
-                        <a href="#" class="main-btn">Try it Free</a>
+                        <p class="text">
+                            Build a fully functional Intelligent Virtual Assistant within minutes using Kingspin's Conversation Studio without writing a single line of code.
+                        </p>
+                        <!-- <a href="#" class="main-btn">Try it Free</a> -->
                     </div> <!-- about content -->
                 </div>
                 <div class="col-lg-6">
                     <div class="about-image text-center mt-50 wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
-                        <img src="{% static 'images/about3.svg' %}" alt="about">
+                        <img src="{% static 'images/code.svg' %}" alt="about">
                     </div> <!-- about image -->
                 </div>
             </div> <!-- row -->
