--- a/chatbot/templates/index.html
+++ b/chatbot/templates/index.html
@@ -256,7 +256,7 @@ Kingspin - AI
                 </div>
                 <div class="col-lg-6">
                     <div class="about-image text-center mt-50 wow fadeInRightBig" data-wow-duration="1s" data-wow-delay="0.5s">
-                        <img src="{% static 'images/code.svg' %}" alt="about">
+                        <img src="{% static 'images/code.png' %}" alt="about">
                     </div> <!-- about image -->
                 </div>
             </div> <!-- row -->
