--- a/chatbot/templates/index.html
+++ b/chatbot/templates/index.html
@@ -50,7 +50,7 @@ Kingspin - AI
                             </div> <!-- navbar collapse -->
                             
                             <div class="navbar-btn d-none d-sm-inline-block">
-                                <a class="main-btn" data-scroll-nav="0" href="#pricing">Free Trial</a>
+                                <a class="main-btn" data-scroll-nav="0" href="{%url 'logout'%}">LOGOUT</a>
                             </div>
                         </nav> <!-- navbar -->
                     </div>
