--- a/chatbot/templates/user/index.html
+++ b/chatbot/templates/user/index.html
@@ -1,6 +1,7 @@
 {% extends 'user/base.html' %}
 
 {% load static %}
+{% load unicorn %}
 
 {% block title %}
 Dashboard
@@ -19,13 +20,14 @@ Dashboard
                     <h4>Conversation Console</h4>
                     <div class="card-description">Customize your Bot!</div>
                 </div>
-                <div class="">
-                    <div class="bicon shadow-primary bg-primary">
-                        <i class="fas fa-plus"></i>
-                    </div>
-                </div>
+                <!-- <div class="">
+                    <button class="btn btn-icon btn-primary bicon">
+                        <i class="fab fa-battle-net "></i>
+                    </button>
+                </div> --> 
+                {% unicorn 'chatbot' %}
                 <div class="card-body" style="height: 100vh;">
-                   
+                  
                 </div>
             </div>
         </div>
