--- a/chatbot/static/user/css/custom.css
+++ b/chatbot/static/user/css/custom.css
@@ -1,15 +1,15 @@
 body.layout-4 .main-sidebar .sidebar-menu li.dlink.active>a{color:#3B3D55 !important}
 .bicon{
-    width: 50px;
-    height: 50px;
-    line-height: 50px;
-    font-size: 22px;
+    width: 50px !important;
+    height: 50px !important;
+    line-height: 22px !important;
+    font-size: 22px !important;
     margin: 25px;
     border-radius: 3px;
     text-align: center;
     float: left;
 }
 .bicon>i{
-    font-size: 22px;
+    font-size: 22px !important;
     color: #fff;
 }
