--- a/unicorn/templates/unicorn/chatbot.html
+++ b/unicorn/templates/unicorn/chatbot.html
@@ -1,6 +1,6 @@
 <div>
     <button unicorn:click="train" unicorn:key="trainKey" class="btn btn-icon btn-primary bicon">
             <i class="fab fa-battle-net" unicorn:loading.remove unicorn:target="trainKey"></i>
-            <i class="fas fa-cog fa-spin" unicorn:loading unicorn:target="trainKey"></i>
+            <i class="fab fa-battle-net fa-spin" unicorn:loading unicorn:target="trainKey"></i>
     </button>
 </div>
